--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smart_cliff",
-  "homepage": "https://JEGANEESHWARAN.github.io/",
+  "homepage": "https://JEGANEESHWARAN.github.io/Project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,11 +30,11 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
